# WSN_FRONTEND

./: Cargo.toml  README.md  meson.build  org.vt.WSNFN.json
data/: meson.build  org.vt.WSNFN.appdata.xml.in  org.vt.WSNFN.desktop.in  org.vt.WSNFN.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  bluetooth.rs  config.rs  graph.rs  main.rs  meson.build  utils.rs  window.rs  window.ui  wireless_sensor_node_frontend.gresource.xml
