[package]
name = "wireless-sensor-node_frontend"
version = "0.1.0"
edition = "2018"

[dependencies]
cairo-rs = { version = "^0.15.1" }
gtk = { gtk4 = "^0.4.6" }
rand = "^0.8.4"
gio = "^0.15.5"
gdk = "^0.15.2"
glib = "^0.15.5"
btleplug = "^0.9.1"
uuid = "^0.8.2"
futures = "^0.3.21"
tokio = { version = "^1.17.0", features = ["rt-multi-thread", "macros"] }
chrono = "^0.4.19"
